src/test/compile-fail/tag-variant-cast-non-nullary.rs
//error-pattern: non-scalar cast

enum non_nullary {
    nullary,
    other(int),
}

fn main() {
    let v = nullary;
    let val = v as int;
}
